UI: Increase sticky filtering toolbar top offset to fix overlap

--- a/src/pages/Tasks.module.css
+++ b/src/pages/Tasks.module.css
@@ -51,7 +51,7 @@
 
 .stickyHeader {
     position: sticky;
-    top: 64px;
+    top: 76px;
     z-index: 100;
     background-color: var(--bg-app);
     margin: 0 -16px 8px -16px;
@@ -65,11 +65,11 @@
 }
 
 :global(.platform-ios) .stickyHeader {
-    top: 56px;
+    top: 68px;
 }
 
 :global(.platform-android) .stickyHeader {
-    top: 100px;
+    top: 112px;
 }
 
 .stickyHeader::after {
